[metadata]
name = ubi-manifest
version = attr: ubi_manifest.VERSION
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
python_requires = >=3.9
url="https://github.com/release-engineering/ubi_manifest",
project_urls=
    Documentation = TODO
    Changelog = TODO

[options]
packages = find: 
install_requires =
    celery[redis]
    fastapi
    pubtools-pulplib
    rpmdyn
    attrs
    more-executors
    ubi-config

[options.packages.find]
exclude=tests




